# galaxy-classification

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
galaxy_classification/: __init__.py  cleaning.py  config.py  dataset.py  embedding_plots.py  features.py  gui.py  plots.py  transforms.py  utils.py
galaxy_classification/modeling/: predict.py  train.py
notebooks/: Zoobot_v2_Finetune_Classifier.ipynb  Zoobot_v2_Finetune_UPR.ipynb  prepare_galaxy_files.ipynb
