[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "galaxy_classification"
version = "0.0.1"
description = "Image classification of objects similar to galaxies"
authors = [
  { name = "Remi Megret" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["galaxy_classification"]
include = ["pyproject.toml", "galaxy_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["galaxy_classification"]
force-sort-within-sections = true

